@@ -21,6 +21,7 @@
 
 - テストディレクトリの変更のタイミングによっては、Ethna_UnitTestMangerがWARNINGを出す問題を回避 (thanks: maru_cc)
 - selected="selected" の修正漏れを修正 (thanks:maru_cc) 
+- [Breaking B.C] Ethna_Plugin_CacheManager_Memcache の接続デフォルトが persistent になっていたのを通常接続に変更
 
 ** 2.5.0-preview1
 
